[gd_scene load_steps=11 format=3 uid="uid://c8jwts22qg84f"]

[ext_resource type="Script" path="res://enemy/StateHandler.gd" id="1_t6whi"]
[ext_resource type="Script" path="res://enemy/EnemyStates/IdleState.gd" id="2_d3v2b"]
[ext_resource type="Script" path="res://enemy/EnemyStates/AlertState.gd" id="4_47c8r"]
[ext_resource type="Script" path="res://enemy/EnemyStates/PlayerFoundState.gd" id="5_gpogf"]
[ext_resource type="Script" path="res://enemy/EnemyStates/MAttackState.gd" id="6_2n0xd"]
[ext_resource type="Script" path="res://enemy/EnemyStates/ChaseState.gd" id="7_mtcqq"]
[ext_resource type="Script" path="res://enemy/EnemyStates/DieState.gd" id="8_v1l55"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6mlpn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4810q"]

[sub_resource type="GDScript" id="GDScript_b3arb"]
script/source = "extends \"res://enemy/State.gd\"

@export var patrol_timer = 3;

var destination = 0;
var increment_walk = 0.01;

# Called when the node enters the scene tree for the first time.
func enter():
	print(\"hello\")
	destination = 1 + destination
	
	if owner.position.x >= 1 || owner.position.x <= -1:
		increment_walk = -increment_walk


# Called every frame. 'delta' is the elapsed time since the previous frame.
func update(delta):
	#use navmesh to go to a random point
	owner.position.x += increment_walk
	
	if owner.position.x >= destination || owner.position.x <= -destination:
		state_machine.transition_function(\"IdleState\")
"

[node name="Enemy" type="CharacterBody3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6mlpn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4810q")

[node name="StateHandler" type="Node3D" parent="."]
script = ExtResource("1_t6whi")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node3D" parent="StateHandler"]
script = ExtResource("2_d3v2b")

[node name="IdleTimer" type="Timer" parent="StateHandler/IdleState"]
one_shot = true

[node name="PatrolState" type="Node3D" parent="StateHandler"]
script = SubResource("GDScript_b3arb")

[node name="AlertState" type="Node3D" parent="StateHandler"]
script = ExtResource("4_47c8r")

[node name="PlayerFoundState" type="Node3D" parent="StateHandler"]
script = ExtResource("5_gpogf")

[node name="MAttackState" type="Node3D" parent="StateHandler"]
script = ExtResource("6_2n0xd")

[node name="ChaseState" type="Node3D" parent="StateHandler"]
script = ExtResource("7_mtcqq")

[node name="DieState" type="Node3D" parent="StateHandler"]
script = ExtResource("8_v1l55")
